@@ -1,9 +1,5 @@
 package net.minecraft.util;
 
-import com.google.common.util.concurrent.ListenableFuture;
-import com.google.common.util.concurrent.ListeningExecutorService;
-import com.google.common.util.concurrent.MoreExecutors;
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import java.io.BufferedReader;
 import java.io.DataOutputStream;
 import java.io.File;
@@ -12,29 +8,33 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
-import java.io.UnsupportedEncodingException;
 import java.net.HttpURLConnection;
 import java.net.Proxy;
 import java.net.ServerSocket;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.concurrent.Executors;
-import java.util.concurrent.atomic.AtomicInteger;
-import net.minecraft.server.MinecraftServer;
+
 import org.apache.commons.io.FileUtils;
 import org.apache.commons.io.IOUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 
+import com.google.common.util.concurrent.ListenableFuture;
+import com.google.common.util.concurrent.ListeningExecutorService;
+import com.google.common.util.concurrent.MoreExecutors;
+import com.google.common.util.concurrent.ThreadFactoryBuilder;
+
+import net.minecraft.server.MinecraftServer;
+
 public class HttpUtil {
 	public static final ListeningExecutorService field_180193_a = MoreExecutors.listeningDecorator(Executors
 			.newCachedThreadPool((new ThreadFactoryBuilder()).setDaemon(true).setNameFormat("Downloader %d").build()));
 
-	/** The number of download threads that we have started so far. */
-	private static final AtomicInteger downloadThreadsStarted = new AtomicInteger(0);
 	private static final Logger logger = LogManager.getLogger();
 
 	/**
@@ -111,6 +111,7 @@ public class HttpUtil {
 		}
 	}
 
+	@SuppressWarnings("unchecked")
 	public static ListenableFuture<Object> downloadResourcePack(final File saveFile, final String packUrl,
 			final Map<String, String> p_180192_2_, final int maxSize, final IProgressUpdate p_180192_4_,
 			final Proxy p_180192_5_) {
@@ -128,7 +129,7 @@ public class HttpUtil {
 				try {
 					try {
 						byte[] abyte = new byte[4096];
-						URL url = new URL(packUrl);
+						URL url = new URI(packUrl).toURL();
 						httpurlconnection = (HttpURLConnection) url.openConnection(p_180192_5_);
 						float f = 0.0F;
 						float f1 = (float) p_180192_2_.size();
@@ -220,7 +221,7 @@ public class HttpUtil {
 							InputStream inputstream1 = httpurlconnection.getErrorStream();
 
 							try {
-								HttpUtil.logger.error(IOUtils.toString(inputstream1));
+								HttpUtil.logger.error(IOUtils.toString(inputstream1, StandardCharsets.UTF_8));
 							} catch (IOException ioexception) {
 								ioexception.printStackTrace();
 							}
